2005-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.12 TAGGED FOR RELEASE ***

	* generic/tkOldConfig.c (Tk_ConfigureWidget): fix the handling of
	TK_CONFIG_OPTION_SPECIFIED to be flagged appropriately in original
	Tk_ConfigSpec.  This is *not* thread safe, but will be retained
	for 8.4.x and left out of 8.5.x. [Bug 749908]

2005-12-05  Reinhard Max  <max@tclers.tk>

	* unix/tkUnixEvent.c (OpenIM): Added a workaround to allow at
	least ASCII and the Compose key when typing into text and entry
	widgets on a system that uses SCIM. This has to be taken out again
	once the SCIM problems have been fixed.

2005-12-04  Daniel Steffen  <das@users.sourceforge.net>

	* mac/README: add note that mac classic port is no longer supported.

2005-12-01  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update changes for 8.4.12 release

	* mac/tkMacWm.c:	Restored consistent error checking and
	* macosx/tkMacOSXWm.c:	messages among different platform's
	* tests/wm.test:	[wm grid] commands.  [Bug 1323972].
	* win/tkWinWm.c:

2005-12-01  Kevin Kenny  <kennykb@acm.org>

	* win/makefile.vc: restored buildability.
	
2005-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/menu.tcl (::tk::PostOverPoint): correct menu post near
	bottom of screen on Windows. [Bug 1353416]

2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset
	* unix/configure: regen.

	* macosx/tkMacOSXCarbonEvents.c (TkMacOSXInitCarbonEvents): added newly
	registered kEventAppAvailableWindowBoundsChanged to debugging code.

2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (WmAttributesCmd): set (no)topmost window aspect
	before rewrapping.  [Bug 1086049]

	* generic/tkImgGIF.c: cast calls to block_out

	* win/Makefile.in: place TCL_BIN_DIR first in PATH for targets to
	get Tcl built dll first.

	* tests/scrollbar.test (6.22): fix rounding-error sensitive test
