@@ -1,3 +1,9 @@
+2005-12-08  Daniel Steffen  <das@users.sourceforge.net>
+
+        * macosx/tkMacOSXInt.h:
+        * macosx/tkMacOSXWindowEvent.c:
+        * macosx/tkMacOSXXStubs.c: sync comments/whitespace with HEAD.
+
 2005-12-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.4.12 TAGGED FOR RELEASE ***
